update structure of project.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,17 @@
+# spring.datasource.username=admin
+
 spring.application.name=spring-boot-ToDo-application
 server.port=5432
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.username=admin
-spring.datasource.password=admin
-spring.jpa.database-platform=org.hibernate.
 
-#allow devtools restart support
-spring.devtools.restart.enabled=true
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/tasks?currentSchema=tasks
+spring.datasource.password=12345
+
+spring.jpa.database-platform = org.hibernate.dialect.PostgreSQL94Dialect
+spring.jpa.hibernate.ddl-auto = create-drop
+spring.jpa.show-sql=true
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.format_sql=true
+
+server.error.include-message=always
