complete Category and User cruds.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,15 @@
 # spring.datasource.username=admin
 
 spring.application.name=spring-boot-ToDo-application
-server.port=5432
+server.port=443
 
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/tasks?currentSchema=tasks
-spring.datasource.password=12345
+spring.datasource.url=jdbc:postgresql://localhost:5432/task
+spring.datasource.username=postgres
+spring.datasource.password=1234
 
 spring.jpa.database-platform = org.hibernate.dialect.PostgreSQL94Dialect
-spring.jpa.hibernate.ddl-auto = create-drop
+spring.jpa.hibernate.ddl-auto = update  
 spring.jpa.show-sql=true
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
